--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Assets\Medieval_Warriors_Pack\Scripts\Example_Motion_Controller.cs" />
     <Compile Include="Assets\Assets\Medieval_Warriors_Pack\Scripts\Camera16x9.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerAttack.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyAttack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
